[package]
name = "symbios-turtle-3d"
version = "0.1.1"
edition = "2024"
authors = ["Janus"]
description = "Spatial interpretation layer for Symbios L-Systems using glam."
license = "MIT"

[dependencies]
symbios = { path = "../symbios", version = "1.0.2" }
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
