[package]
name = "symbios-turtle-3d"
version = "0.3.0"
edition = "2024"
authors = ["Janus"]
description = "Spatial interpretation layer for Symbios L-Systems using glam."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJanusStream/symbios-turtle-3d"
keywords = ["lsystem", "procedural", "generative", "simulation"]
categories = ["simulation", "game-development", "mathematics"]

[dependencies]
symbios = "1.1"
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
